Fixing dark mode issue css

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,7 @@ body {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  color-scheme: light dark;
 }
 
 button {
